[workspace]
resolver = "2"
members = [
    "sheave-core",
    "sheave-client",
    "sheave-server",
    "sheave-integration-tests"
]

[workspace.dependencies]
bytes = "1.9.0"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.25"
pin-project-lite = "0.2.16"
tokio = {version = "1.43.0", features = ["full"]}
rand = "0.8.5"
