[workspace]
resolver = "2"
members = [
    "sheave-core",
    "sheave-client",
    "sheave-server",
    "sheave-integration-tests"
]

[workspace.dependencies]
bytes = "1.10.1"
clap = { version = "4.5.34", features = ["derive", "env"] }
env_logger = "0.11.7"
futures = "0.3.31"
log = "0.4.27"
pin-project-lite = "0.2.16"
tokio = { version = "1.44.1", features = ["full"] }
rand = "0.9.0"
