[workspace]
resolver = "2"
members = [
    "sheave-core",
    "sheave-client",
    "sheave-server"
]

[workspace.dependencies]
bytes = "1.10.1"
clap = { version = "4.5.49", features = ["derive", "env"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
pin-project-lite = "0.2.16"
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.9.2"
uuid = { version = "1.18.1", features = ["std", "v7", "fast-rng", "macro-diagnostics"] }
