[package]
name = "sheave-client"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
env_logger.workspace = true
log.workspace = true
futures.workspace = true
sheave-core = { path = "../sheave-core" }
tokio.workspace = true

[dev-dependencies]
uuid.workspace = true
