[package]
name = "sheave-core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
digest = "0.10.7"
futures = "0.3.28"
hmac = "0.12.1"
pin-project-lite = "0.2.13"
rand = "0.8.5"
sha2 = "0.10.8"
tokio = {version = "1.32.0", features = ["full"]}
