[package]
name = "sheave-server"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
dotenvy = "0.15.7"
env_logger.workspace = true
futures.workspace = true
log.workspace = true
pin-project-lite.workspace = true
sheave-core = { path = "../sheave-core" }
sqlx = "0.8.5"
sqlx-macros = "0.8.5"
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
rand.workspace = true

[features]
default = ["sqlx/default", "sqlite", "sqlx/runtime-tokio"]
sqlite = ["sqlx/sqlite", "sqlx-macros/sqlite"]
mysql = ["sqlx/mysql", "sqlx-macros/mysql"]
postgres = ["sqlx/postgres", "sqlx-macros/postgres"]
